# rune-casting

./: .gitignore  Cargo.toml  README.md
examples/simple_example/: Cargo.toml
examples/simple_example/src/: main.rs
src/: lib.rs  main.rs
src/casting/: mod.rs  skill_tree.rs
src/rune/: mod.rs  pos.rs  tokenizer.rs  uppercase.rs
src/skill_tree/: mod.rs
src/spell/: mod.rs  morphological.rs  pos.rs  tokenize.rs
tests/: casting_test.rs  rune_test.rs  skill_tree_test.rs  spell_test.rs
